Bug 317944 - erasing files or folders makes other files/folders disappear
Summary: erasing files or folders makes other files/folders disappear
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (other bugs)
Version First Reported In: 2.7.0
Platform: Other Linux
: NOR normal
Target Milestone: 2.8
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-06 18:26 UTC by Germano Massullo (Thetra)
Modified: 2013-05-13 15:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Germano Massullo (Thetra) 2013-04-06 18:26:25 UTC
While you are browsing folders with Amarok, if you trash any file or folder, you will see istantanely, disappear the remaining folders/files. To see them again you have to change directory and then come back again

Reproducible: Always

Steps to Reproduce:
1. See details
Comment 1 Mark Kretschmann 2013-05-13 10:56:43 UTC
True, I can reproduce this here. "Delete" works fine, but "Move to Trash" doesn't.
Comment 2 Mark Kretschmann 2013-05-13 15:23:54 UTC
Git commit 89a81412ac7847b48da2c75bccc8c1fe1504486d by Mark Kretschmann.
Committed on 13/05/2013 at 17:19.
Pushed by markey into branch 'master'.

Fix file-browser becoming empty when a file was moved to trash.

This was caused by a Progress operation. I don't know why. Removing
the call made it work, and I don't think progress status is much
needed for moving stuff to trash.
FIXED-IN: 2.8

M  +1    -0    ChangeLog
M  +0    -9    src/browsers/filebrowser/FileView.cpp

http://commits.kde.org/amarok/89a81412ac7847b48da2c75bccc8c1fe1504486d