Fix file-browser becoming empty when a file was moved to trash.

This was caused by a Progress operation. I don't know why. Removing
the call made it work, and I don't think progress status is much
needed for moving stuff to trash.

BUG: 317944
FIXED-IN: 2.8